# backend/internal/routes/routes.go
@@ -11,6 +11,14 @@ func SetupRoutes(app *fiber.App) {
 	app.Post("/register", handlers.Register)
 	app.Post("/Login", handlers.Login)
 	app.Post("/products", handlers.AddProduct)
+	app.Get("/products", handlers.GetProducts)
 	app.Post("/campaigns", handlers.AddCampaign)
+	app.Get("/campaigns", handlers.GetCampaigns)
+	app.Delete("/campaigns/:id", handlers.DeleteCampaign)
+	app.Patch("/campaigns/:id/activate", handlers.ActivateCampaign)
 	app.Post("/product-categories", handlers.AddProductCategory)
+	app.Get("/product-categories", handlers.GetProductCategories)
+	app.Delete("/product-categories/:id", handlers.DeleteProductCategory)
+	app.Post("/campaign-categories", handlers.AddCampaignCategory)
+	app.Get("/campaign-categories", handlers.GetCampaignCategories)
 }
